sassi-macros/tests/compile_fail/cacheable_bad_watermark_field.stderr
error: Cacheable: watermark_field `updated_at` does not name a field on `MissingWatermarkField`
 --> tests/compile_fail/cacheable_bad_watermark_field.rs:6:31
  |
6 | #[cacheable(watermark_field = "updated_at")]
  |                               ^^^^^^^^^^^^
